traversal.column.traversalbycolumn.TraversalByColumn.scala.error
Compilation error:
TraversalByColumn:3: error: illegal start of simple pattern
  var case=0
      ^TraversalByColumn:14: error: '=' expected but '}' found.
}
^