traversal.column.traversalbycolumn.TraversalByColumn.scala.code
override def run() {
  var i=0
  var j=0
  var case=0
  while (!positionFinale()){
    for (j <- 0 to 6){
      for (i <- 0 to 6){
        ecritMessage(case)
        case +=1
      }
    }
  }
  case+=1
  ecritMessage(case)
}

def positionFinale():Boolean={
  if (getX()==6 && getY()==6){
    return true
  }
  return false
}